--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "devDependencies": {
     "browser-sync": "^2.18.7",
     "gulp": "^3.9.1"
+  },
+  "dependencies": {
+    "font-awesome": "^4.7.0"
   }
 }
